--- a/container/dockerfile
+++ b/container/dockerfile
@@ -1,10 +1,10 @@
-FROM nvidia/cuda:11.3.1-cudnn8-devel-ubuntu20.04
+FROM nvidia/cuda:11.3.1-cudnn8-devel-ubuntu18.04
 
 ENV DEBIAN_FRONTEND=nointeractive
 ENV TZ=Asia/Tokyo
 
 # USE MIRROR
-# RUN sed -i.bak -r 's!(deb|deb-src) \S+!\1 mirror://mirrors.ubuntu.com/mirrors.txt!' /etc/apt/sources.list
+RUN sed -i.bak -r 's!(deb|deb-src) \S+!\1 mirror://mirrors.ubuntu.com/mirrors.txt!' /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get install -y tzdata
 
@@ -14,21 +14,26 @@ RUN curl -sL https://deb.nodesource.com/setup_14.x | bash -
 RUN apt-get install -y nodejs
 
 RUN apt-get update --fix-missing
-RUN apt-get install -y build-essential git wget tar python3-pip libjpeg-dev graphviz
-
-RUN git config --global credential.helper store
+RUN apt-get install -y build-essential git libgnome-keyring-dev wget tar python3-pip zlib1g-dev libjpeg-dev graphviz
 
 # INSTALL JUPYTER PYTHON
-RUN python3 -m pip install jupyterlab==3.0.0 && \
-    python3 -m pip install jupyterlab-lsp==3.9.1 && \
-    python3 -m pip install python-lsp-server && \
-    python3 -m pip install jupyterlab-git
+ADD requirements-jupyter.txt /src/
+RUN python3 -m pip install -r /src/requirements-jupyter.txt
 RUN python3 -m jupyter labextension install --no-build '@krassowski/jupyterlab-lsp@3.9.1' && \
     python3 -m jupyter lab build --dev-build=False --minimize=True
 
 # INSTALL requirements.txt
-ADD requirements.txt /src/
-RUN python3 -m pip install -r /src/requirements.txt
+ADD requirements-pytorch.txt /src/
+RUN python3 -m pip install -r /src/requirements-pytorch.txt
+
+# SET GIT CONFIGRATIONS
+ARG GITHUB_CREDENTIALS=
+ARG GIT_NAME
+ARG GIT_MAIL
+RUN echo "${GITHUB_CREDENTIALS}" > /root/.git-credentials
+RUN git config --global credential.helper "store --file /root/.git-credentials"
+RUN git config --global user.name "${GIT_NAME}"
+RUN git config --global user.email ${GIT_MAIL}
 
 # INITIALIZE CONFIGURATION
 # ADD .user_config /root/.jupyter/user-settings
