--- a/container/dockerfile
+++ b/container/dockerfile
@@ -17,14 +17,14 @@ RUN apt-get update --fix-missing
 RUN apt-get install -y build-essential git libgnome-keyring-dev wget tar python3-pip zlib1g-dev libjpeg-dev graphviz
 
 # INSTALL JUPYTER PYTHON
-ADD requirements-jupyter.txt /src/
-RUN python3 -m pip install -r /src/requirements-jupyter.txt
+ADD requirements/jupyter.txt /src/
+RUN python3 -m pip install -r /src/jupyter.txt
 RUN python3 -m jupyter labextension install --no-build '@krassowski/jupyterlab-lsp@3.9.1' && \
     python3 -m jupyter lab build --dev-build=False --minimize=True
 
 # INSTALL requirements.txt
-ADD requirements-pytorch.txt /src/
-RUN python3 -m pip install -r /src/requirements-pytorch.txt
+ADD requirements/pytorch.txt /src/
+RUN python3 -m pip install -r /src/pytorch.txt
 
 # SET GIT CONFIGRATIONS
 ARG GITHUB_CREDENTIAL=
