--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,17 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: 1
+              count: all
               capabilities: ["gpu"]
+    environment:
+      - WORKSPACE_DIR=/workspace
+      - DATASET_DIR=/datasets
     volumes:
       - ".jupyter:/root/.jupyter"
-      - "./container/credential:/usr/share/doc/git/contrib/credential"
-      - "${DATASET_LOCALDIR}:${DATASET_DIR}"
       - ".:/workspace"
+      - "${DATASET_LOCALDIR}:/datasets"
     env_file: container/.env
-    
+
     command: python3 -m jupyter lab --ip=0.0.0.0 --allow-root
     ports:
       - 8888:8888
